--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -333,7 +333,7 @@
                                 cell.style.visibility = 'hidden'
                             }
 
-                            var lastDayOfMonth = new Date(date.getFullYear(), today.getMonth()+1, 0).getDate();
+                            var lastDayOfMonth = new Date(date.getFullYear(), date.getMonth()+1, 0).getDate();
                             for (var day = 1; day <=lastDayOfMonth; day++){
                                 let cell = document.getElementById('cell' + x)
                                 cell.textContent = day
