added cell.visible to make cells reappear

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -335,6 +335,7 @@
                             var lastDayOfMonth = new Date(date.getFullYear(), date.getMonth()+1, 0).getDate();
                             for (var day = 1; day <=lastDayOfMonth; day++){
                                 let cell = document.getElementById('cell' + x)
+                                cell.style.visibility = 'visible'
                                 cell.textContent = day
                                 x++;
                             }
