--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EUTRC APP | Home</title>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         body {
             background-color: rgb(25,25,25);
