success: function .ajax

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -386,7 +386,7 @@
                     month,
                     year
                 },
-                function (response) {
+                success: function (response) {
                     console.log(response)
                 }
             }
