forgot to intialize trainingDayCell

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -356,7 +356,7 @@
                             for (training in trainingArrayJson){
                                 const firstDayCurrentMonth = new Date(date.getFullYear(),  date.getMonth(), 1).getDay();
                                 dateInt = training['date_day'] + (getFirstDayInt(firstDayCurrentMonth)-1)
-                                trainingDayCell = document.getElementById('cell' + dateInt)
+                                var trainingDayCell = document.getElementById('cell' + dateInt)
                                 trainingDayCell.textContent =+ "\n" + training['team']
                             }
                         }
