--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -353,6 +353,11 @@
                         }
 
                         function loadTrainings(trainingArrayJson, date){
+                            for (x = 0; x < trainingArrayJson.length; x++){
+                                console.log("int loop in trainingArray = " + JSON.stringify(trainingArrayJson[x]));
+                            }
+
+
                             for (training in trainingArrayJson){
                                 console.log("training in trainingArray = " + JSON.stringify(training));
                                 console.log("trainingArrayJson = " + JSON.stringify(trainingArrayJson));
