--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -361,7 +361,7 @@
                                 const firstDayCurrentMonth = new Date(date.getFullYear(),  date.getMonth(), 1).getDay();
                                 var dateInt = training['date_day'] + (getFirstDayInt(firstDayCurrentMonth)-1)
                                 var trainingDayCell = document.getElementById('cell' + dateInt)
-                                trainingDayCell.textContent =+ "\n" + training['team']
+                                trainingDayCell.textContent = trainingDayCell.textContent + "\n" + training['team']
                             });
 
                         }
