--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -359,8 +359,8 @@
                                 const firstDayCurrentMonth = new Date(date.getFullYear(),  date.getMonth(), 1).getDay();
                                 var dateInt = Number(training['date_day'])  + (getFirstDayInt(firstDayCurrentMonth)-1) //THEYRE STRINGS
                                 var trainingDayCell = document.getElementById('cell' + dateInt)
-                                console.log('cell' + dateInt);
-                                trainingDayCell.textContent = /*trainingDayCell.textContent + "\n"*/ + training['team']
+                                console.log(training['team']);
+                                trainingDayCell.textContent = trainingDayCell.textContent + "\n" + training['team']
                             });
 
                         }
