--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -360,7 +360,7 @@
                                 var dateInt = Number(training['date_day'])  + (getFirstDayInt(firstDayCurrentMonth)-1) //THEYRE STRINGS
                                 var trainingDayCell = document.getElementById('cell' + dateInt)
                                 console.log(training['team']);
-                                trainingDayCell.textContent = trainingDayCell.textContent + "\n" + training['team']
+                                trainingDayCell.innerHTML = trainingDayCell.textContent + "<br>" + training['team']
                             });
 
                         }
