--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -136,7 +136,8 @@
 
         .cells-container {
             display: grid; 
-            grid-template-columns: repeat(7, 1fr)
+            grid-template-columns: repeat(7, 1fr);
+            text-align: center;
         }
 
         .cells {
