--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -141,6 +141,8 @@
         }
 
         .cells {
+            margin-top: 10px;
+            margin-bottom: 10px;
             padding: 5px;
             min-height: 35px;
         }
