--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -148,11 +148,11 @@
         }
 
         .cell-date-day {
-            font-size: small;
+            font-size:large;
         }
 
         .cell-training-info {
-            font-size: smaller;
+            font-size:medium;
         }
 
     </style>
