--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -148,7 +148,7 @@
         }
 
         .cell-date-day {
-            font-size:large;
+            font-size:larger;
         }
 
         .cell-training-info {
