--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -103,6 +103,7 @@
         .title-section{
             display: flex;
             justify-content:space-evenly;
+            align-items: center;
             flex-direction: row;
             padding: 10px;
             border-top: 0px;
@@ -111,10 +112,12 @@
             border-bottom: 1px;
             border-style: solid;
             border-color: antiquewhite;
+            font-size: 50px;
         }
 
         .month-buttons {
-            font-size: 200px;
+            font-size: 50px;
+            background-color: transparent;
         }
 
         .weekday-labels-container {
