--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -116,8 +116,10 @@
         }
 
         .month-buttons {
-            font-size: 50px;
+            font-size: 100px;
             background-color: transparent;
+            color: azure;
+            border: none;
         }
 
         .weekday-labels-container {
