--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -120,6 +120,7 @@
             background-color: transparent;
             color: azure;
             border: none;
+            cursor: pointer;
         }
 
         .weekday-labels-container {
